Добавил основную разметку

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -1,6 +1,6 @@
 <header class="hero">
-  <div>
-    <nav>
+  <div class="hero-container">
+    <nav class="hero-navi">
       <a href="#"
         ><img
           src="./images/svg/logo-black.svg"
@@ -8,41 +8,60 @@
           width="128px"
           height="45px"
       /></a>
-      <div>
-        <ul>
-          <li>Программы обучения</li>
-          <li>О нас</li>
-          <li>Варианты обучения</li>
-          <li>Контакты</li>
+      <div class="hero-menu">
+        <ul class="hero-menu-list">
+          <li class="hero-menu-item">
+            <a href="" class="hero-menu-link">Программы обучения</a>
+          </li>
+          <li class="hero-menu-item">
+            <a href="" class="hero-menu-link">О нас</a>
+          </li>
+          <li class="hero-menu-item">
+            <a href="" class="hero-menu-link">Варианты обучения</a>
+          </li>
+          <li class="hero-menu-item">
+            <a href="" class="hero-menu-link">Контакты</a>
+          </li>
         </ul>
-        <a href="">Консультация по телефону</a>
-        <button>
-          <!-- <svg class="" width="26" height="26" aria-label="Переключатель мобильного меню"><use href="./images/svg/sprite.svg#menu"></svg> -->
+        <a href="" class="hero-menu-cons">Консультация по телефону</a>
+        <button class="hero-button-menu">
           <img src="./images/svg/menu.svg" width="26" height="26" alt="" />
         </button>
       </div>
     </nav>
-    <section>
-      <div>
-        <h1>Комплексная подготовка к ВНО по английскому языку</h1>
-        <p>
-          <span>Просто не будет.</span><br />Но ты гарантировано наберешь<br /><span
-            >+25 баллов</span
-          >
+    <section class="hero-bg">
+      <div class="hero-title">
+        <h1>
+          Комплексная<br />
+          <nobr>подготовка к ВНО</nobr><br />
+          по английскому<br />
+          языку
+        </h1>
+        <p class="hero-descript">
+          <span class="descript">Просто не будет.</span><br />Но ты
+          гарантировано наберешь<span class="descript-orange"> +25 баллов</span>
         </p>
-        <a href="">Хочу на бесплатное занятие</a>
+        <a href="" class="hero-bg-link">Хочу на бесплатное занятие</a>
       </div>
       <img
+        class="hero-img"
         src="./images/header/desktop/hero-bg.png"
         alt="Картинка героя"
-        width="375"
       />
     </section>
     <section>
-      <ul>
-        <li>Адаптированная авторская программа ВНО</li>
-        <li>Современные методики обучения</li>
-        <li>Финансовая гарантия результата</li>
+      <ul class="hero-program">
+        <li class="hero-program-item item-1">
+          <h3 class="hero-program-title">Современные методики обучения</h3>
+        </li>
+        <li class="hero-program-item item-2">
+          <h3 class="hero-program-title">
+            Адаптированная авторская программа ВНО
+          </h3>
+        </li>
+        <li class="hero-program-item item-3">
+          <h3 class="hero-program-title">Финансовая гарантия результата</h3>
+        </li>
       </ul>
     </section>
   </div>
