--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,4 @@
 @import '../sass/base/fonts';
 @import '../sass/base/common';
 @import '../sass/layouts/header';
+@import '../sass/utils/variables';
