--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -10,7 +10,7 @@
   max-width: 1340px;
   margin-left: auto;
   margin-right: auto;
-  padding: 45px 15px 0px;
+  padding: 45px 15px 130px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   line-height: 28px;
@@ -39,8 +39,15 @@
   text-align: center;
   line-height: 70px;
   color: #ff6b09;
+  background-color: #fff;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (max-width: 1279px) {
     margin-right: 101px;
+  }
+  &:hover,
+  &:focus {
+    background-color: #ff6b09;
+    color: #fff;
   }
 }
 
@@ -84,11 +91,17 @@
 
 .hero-menu-link {
   color: #b9b9b9;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: #ff6b09;
+  }
 }
 // Секция BACKGROUNG ГЕРОЯ
 .hero-bg {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 106px;
 }
 
 .hero-title {
@@ -125,12 +138,20 @@
   text-align: center;
   width: 354px;
   border: 0;
-  background: #ff6b09;
+  background-color: #ff6b09;
+  border: 2px solid transparent;
   font-size: 14px;
   line-height: 70px;
   color: #fff;
   text-transform: uppercase;
   padding: 0;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #fff;
+    color: #ff6b09;
+    border: 2px solid #ff6b09;
+  }
 }
 .hero-program {
   display: flex;
@@ -149,11 +170,9 @@
   position: relative;
 }
 
-.hero-program-item::before {
+.item-1::before {
   content: '';
   width: 122px;
-}
-.item-1::before {
   display: block;
   background-image: url(../images/svg/female-student-bord.svg);
   background-size: 100px;
@@ -161,6 +180,8 @@
 }
 
 .item-2::before {
+  content: '';
+  width: 122px;
   display: block;
   background-image: url(../images/svg/mobile-learning-bord.svg);
   background-size: 100px;
@@ -168,6 +189,8 @@
 }
 
 .item-3::before {
+  content: '';
+  width: 122px;
   display: block;
   background-image: url(../images/svg/umbrella-bord.svg);
   background-size: 100px;
