--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -1,62 +1,101 @@
-<section class="teacher">
+<section class="teacher container">
   <h2 class="teacher-title">Преподаватель</h2>
+  <div class="teacher-box">
+    <div class="teacher-box-photo">
+      <picture>
+        <source
+          srcset="
+            ./images/teacher/desktop/elena.jpg    1x,
+            ./images/teacher/desktop/elena@2x.jpg 2x
+          "
+          media="(min-width: 1340px)"
+        />
+        <source
+          srcset="
+            ./images/teacher/tablet/elena.jpg    1x,
+            ./images/teacher/tablet/elena@2x.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./images/teacher/mobile/elena.jpg    1x,
+            ./images/teacher/mobile/elena@2x.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="./images/teacher/desktop/elena.jpg"
+          max-width="100%"
+          height="auto"
+          alt="Фото преподавателя"
+          class="teacher-img"
+        />
+      </picture>
+    </div>
+    <div class="teacher-box-bio">
+      <b class="teacher-name">Елена Морева</b>
 
-  <picture>
-    <source
-      srcset="
-        ./images/teacher/desktop/elena.jpg    1x,
-        ./images/teacher/desktop/elena@2x.jpg 2x
-      "
-      media="(min-width: 1340px)"
-    />
-    <source
-      srcset="
-        ./images/teacher/tablet/elena.jpg    1x,
-        ./images/teacher/tablet/elena@2x.jpg 2x
-      "
-      media="(min-width: 768px)"
-    />
-    <source
-      srcset="
-        ./images/teacher/mobile/elena.jpg    1x,
-        ./images/teacher/mobile/elena@2x.jpg 2x
-      "
-      media="(max-width: 767px)"
-    />
-    <img
-      src="./images/teacher/desktop/elena.jpg"
-      width="100%"
-      height="auto"
-      alt="Фото преподавателя"
-      class="teacher-img img"
-    />
-  </picture>
-  <b class="teacher-name">Елена Морева</b>
-  <hr class="h-line" />
-  <ul class="teacher-skills-list">
-    <li class="teacher-skills-item">Опыт подготовки учеников к ВНО - 6 лет</li>
-    <li class="teacher-skills-item">
-      Собственный результат сдачи ВНО - 197 баллов 2 года подряд
-    </li>
-    <li class="teacher-skills-item">
-      Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary
-      English Test)
-    </li>
-  </ul>
-  <p class="teacher-bio">
-    Высшее образование получила в Институте международных отношений НАУ по
-    специальности переводчик-аналитик.
-  </p>
-  <p class="teacher-bio">
-    В свободное время проходит курсы от лучших университетов мира по
-    эффективному преподаванию и методикам написания сочинений.
-  </p>
-  <p class="teacher-bio">
-    В числе пройденных: English Grammar and Essay Writing (Berkeley), English
-    Grammar&Style (The University of Queesland), How to Write an Essay
-    (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching
-    (GEMS education), Powerful Tools for Teaching and Learning (University of
-    Houston).
-  </p>
-  <a href="" class="teacher-certificate"></a>
+      <ul class="teacher-skills-list list">
+        <li class="teacher-skills-item">
+          <!-- <svg class="icon-teacher-skills">
+            <use href="./images/svg/sprite.svg#check-mark"></use>
+          </svg> -->
+          <img
+            src="./images/svg/check-mark.svg"
+            alt="Оранжевая галочка"
+            class="icon-teacher-skills"
+          />
+          <p class="teacher-skills-text">
+            Опыт подготовки учеников к ВНО - 6 лет
+          </p>
+        </li>
+        <li class="teacher-skills-item">
+          <!-- <svg class="icon-teacher-skills">
+            <use href="./images/svg/sprite.svg#check-mark"></use>
+          </svg> -->
+          <img
+            src="./images/svg/check-mark.svg"
+            alt="Оранжевая галочка"
+            class="icon-teacher-skills"
+          />
+          <p class="teacher-skills-text">
+            Собственный результат сдачи ВНО - 197 баллов 2 года подряд
+          </p>
+        </li>
+        <li class="teacher-skills-item last-item">
+          <!-- <svg class="icon-teacher-skills">
+            <use href="./images/svg/sprite.svg#check-mark"></use>
+          </svg> -->
+          <img
+            src="./images/svg/check-mark.svg"
+            alt="Оранжевая галочка"
+            class="icon-teacher-skills"
+          />
+          <p class="teacher-skills-text last-text">
+            Сдала на отлично международный аналог ВНО - Кембриджский PET
+            (Preliminary English Test)
+          </p>
+        </li>
+      </ul>
+      <p class="teacher-bio">
+        Высшее образование получила в Институте международных отношений НАУ по
+        специальности переводчик-аналитик.
+      </p>
+      <p class="teacher-bio">
+        В свободное время проходит курсы от лучших университетов мира по
+        эффективному преподаванию и методикам написания сочинений.
+      </p>
+      <p class="teacher-bio last-bio">
+        В числе пройденных: English Grammar and Essay Writing (Berkeley),
+        English Grammar&Style (The University of Queesland), How to Write an
+        Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of
+        Teaching (GEMS education), Powerful Tools for Teaching and Learning
+        (University of Houston).
+      </p>
+      <a href="" class="teacher-certificate link"
+        >Cambrige English Entry Level Certificate</a
+      >
+    </div>
+  </div>
 </section>
