--- a/src/sass/layouts/_teacher.scss
+++ b/src/sass/layouts/_teacher.scss
@@ -1,4 +1,4 @@
-// Написал здесь временно общие стили, чтобы нориально все отаброжалось.
+// Написал здесь временно общие стили, чтобы номально все отаброжалось.
 *,
 ::before,
 ::after {
@@ -10,6 +10,10 @@ body {
   font-family: 'Montserrat', sans-serif;
   margin: 0px;
 }
+
+// В стилях контейнера пришлось помудрить с шириной, по другому секция
+// получалась меньше по ширине и выглядела не так как на макете..
+// до конца не понял как это решить по другому?
 
 .container {
   width: 100%;
