--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -51,16 +51,37 @@
     </section>
     <section>
       <ul class="hero-program">
-        <li class="hero-program-item item-1">
-          <h3 class="hero-program-title">Современные методики обучения</h3>
-        </li>
-        <li class="hero-program-item item-2">
+        <li class="hero-program-item">
+          <img
+            class="hero-program-img"
+            src="./images/svg/female-student-bord.svg"
+            alt=""
+          />
           <h3 class="hero-program-title">
             Адаптированная авторская программа ВНО
           </h3>
         </li>
-        <li class="hero-program-item item-3">
-          <h3 class="hero-program-title">Финансовая гарантия результата</h3>
+        <li class="hero-program-item">
+          <img
+            class="hero-program-img"
+            src="./images/svg/mobile-learning-bord.svg"
+            alt=""
+          />
+          <h3 class="hero-program-title">
+            Современные<br />
+            методики обучения
+          </h3>
+        </li>
+        <li class="hero-program-item">
+          <img
+            class="hero-program-img"
+            src="./images/svg/umbrella-bord.svg"
+            alt=""
+          />
+          <h3 class="hero-program-title">
+            Финансовая гарантия<br />
+            результата
+          </h3>
         </li>
       </ul>
     </section>
