--- a/src/sass/layouts/_teacher.scss
+++ b/src/sass/layouts/_teacher.scss
@@ -15,29 +15,29 @@ body {
 // получалась меньше по ширине и выглядела не так как на макете..
 // до конца не понял как это решить по другому?
 
-.container {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
+// .container {
+//   width: 100%;
+//   padding-left: 20px;
+//   padding-right: 20px;
+//   margin-left: auto;
+//   margin-right: auto;
 
-  @media screen and (min-width: 320px) {
-    width: 360px;
-  }
+//   @media screen and (min-width: 320px) {
+//     width: 360px;
+//   }
 
-  @media screen and (min-width: 768px) {
-    width: 848px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
+//   @media screen and (min-width: 768px) {
+//     width: 848px;
+//     padding-left: 40px;
+//     padding-right: 40px;
+//   }
 
-  @media screen and (min-width: 1340px) {
-    width: 1680px;
-    padding-left: 183px;
-    padding-right: 183px;
-  }
-}
+//   @media screen and (min-width: 1340px) {
+//     width: 1680px;
+//     padding-left: 183px;
+//     padding-right: 183px;
+//   }
+// }
 
 .list {
   padding: 0;
@@ -56,6 +56,32 @@ body {
 }
 
 // Стили секции Преподаватель
+
+.teacher {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 320px) {
+    width: 360px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 848px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  @media screen and (min-width: 1340px) {
+    width: 1680px;
+    padding-left: 183px;
+    padding-right: 183px;
+    padding-bottom: 130px;
+  }
+}
 
 .teacher-title {
   margin-top: 0;
@@ -178,18 +204,6 @@ body {
     font-size: 16px;
     line-height: 1.25;
   }
-
-  // &::before {
-  //   content: '';
-  //   display: inline-block;
-  //   width: 17px;
-  //   height: 14px;
-  //   margin-right: 9px;
-  //   background-image: url(../images/svg/check-mark.svg);
-  //   background-repeat: no-repeat;
-  //   background-position: center;
-  //   background-size: contain;
-  // }
 }
 
 .last-item {
