задает высоту карточки

--- a/src/sass/_section-method.scss
+++ b/src/sass/_section-method.scss
@@ -101,6 +101,8 @@
   }
 
   @media screen and(max-width:767px) {
+    height: 280px;
+
     &:not(:last-child) {
       margin-bottom: 15px;
     }
