--- a/src/sass/layouts/_teacher.scss
+++ b/src/sass/layouts/_teacher.scss
@@ -11,34 +11,6 @@ body {
   margin: 0px;
 }
 
-// В стилях контейнера пришлось помудрить с шириной, по другому секция
-// получалась меньше по ширине и выглядела не так как на макете..
-// до конца не понял как это решить по другому?
-
-// .container {
-//   width: 100%;
-//   padding-left: 20px;
-//   padding-right: 20px;
-//   margin-left: auto;
-//   margin-right: auto;
-
-//   @media screen and (min-width: 320px) {
-//     width: 360px;
-//   }
-
-//   @media screen and (min-width: 768px) {
-//     width: 848px;
-//     padding-left: 40px;
-//     padding-right: 40px;
-//   }
-
-//   @media screen and (min-width: 1340px) {
-//     width: 1680px;
-//     padding-left: 183px;
-//     padding-right: 183px;
-//   }
-// }
-
 .list {
   padding: 0;
   margin: 0;
@@ -57,28 +29,32 @@ body {
 
 // Стили секции Преподаватель
 
-.teacher {
+.container {
   width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
 
   @media screen and (min-width: 320px) {
-    width: 360px;
+    width: 300px;
   }
 
   @media screen and (min-width: 768px) {
-    width: 848px;
-    padding-left: 40px;
-    padding-right: 40px;
+    width: 710px;
   }
 
   @media screen and (min-width: 1340px) {
-    width: 1680px;
-    padding-left: 183px;
-    padding-right: 183px;
+    width: 1340px;
+  }
+}
+
+.teacher-container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  @media screen and (min-width: 1340px) {
+    padding-top: 130px;
     padding-bottom: 130px;
   }
 }
@@ -112,9 +88,6 @@ body {
 }
 
 .teacher-box-photo {
-  // width: 100%;
-  // height: auto;
-
   @media screen and (max-width: 767px) {
     margin-bottom: 20px;
   }
@@ -125,15 +98,9 @@ body {
   }
 
   @media screen and (min-width: 1340px) {
-    width: 642px;
     margin-right: 30px;
   }
 }
-
-// .teacher-box-bio {
-//   width: 100%;
-//   height: auto;
-// }
 
 .teacher-name {
   display: inline-block;
