--- a/src/sass/_section-method.scss
+++ b/src/sass/_section-method.scss
@@ -2,15 +2,17 @@
 .container {
   width: 100%;
   margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
 
   @media screen and(min-width:320px) {
-    width: 280px;
+    width: 300px;
   }
   @media screen and(min-width:768px) {
-    width: 690px;
+    width: 710px;
   }
-  @media screen and(min-width:1680px) {
-    width: 1320px;
+  @media screen and(min-width:1340px) {
+    width: 1340px;
   }
 }
 
@@ -20,20 +22,14 @@
   background-color: #fff;
   padding-top: 200px;
   padding-bottom: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
 
   @media screen and(min-width:768px) {
     padding-top: 210px;
-    padding-left: 40px;
-    padding-right: 40px;
   }
 
-  @media screen and(min-width:1680px) {
+  @media screen and(min-width:1340px) {
     padding-top: 280px;
     padding-bottom: 130px;
-    padding-left: 180px;
-    padding-right: 180px;
   }
 }
 
@@ -70,7 +66,7 @@
     line-height: 1.308;
   }
 
-  @media screen and(min-width:1680px) {
+  @media screen and(min-width:1340px) {
     font-size: 46px;
     line-height: 1.304;
     text-align: left;
@@ -116,7 +112,9 @@
     padding-right: 20px;
   }
 
-  @media screen and(min-width:768px) and (max-width: 1679px) {
+  @media screen and(min-width:768px) and (max-width: 1339px) {
+    height: 334px;
+
     &:nth-child(2n + 1) {
       margin-right: 20px;
     }
@@ -126,7 +124,7 @@
     }
   }
 
-  @media screen and(min-width:1680px) {
+  @media screen and(min-width:1340px) {
     width: calc((100% - 40px) / 3);
 
     padding-left: 20px;
@@ -181,11 +179,11 @@
     }
   }
 
-  @media screen and(min-width:768px) and (max-width: 1679px) {
+  @media screen and(min-width:768px) and (max-width: 1339px) {
     margin-bottom: 25px;
   }
 
-  @media screen and(min-width:1680px) {
+  @media screen and(min-width:1340px) {
     font-size: 20px;
     line-height: 1.4;
   }
@@ -209,7 +207,7 @@
     color: #fff;
   }
 
-  @media screen and(min-width:1680px) {
+  @media screen and(min-width:1340px) {
     font-size: 18px;
     line-height: 1.556;
   }
