Добавил мобильную разметку

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -32,10 +32,7 @@
     <section class="hero-bg">
       <div class="hero-title">
         <h1 class="slogan">
-          Комплексная<br />
-          <nobr>подготовка к ВНО</nobr><br />
-          по английскому<br />
-          языку
+          Комплексная подготовка к ВНО по английскому языку
         </h1>
         <p class="hero-descript">
           <span class="descript">Просто не будет.</span><br />Но ты
@@ -43,13 +40,13 @@
         </p>
         <a href="" class="hero-bg-link">Хочу на бесплатное занятие</a>
       </div>
-      <picture class="hero-img">
+      <picture>
         <source
           srcset="
             ./images/header/desktop/hero-bg.png    1x,
             ./images/header/desktop/hero-bg@2x.png 2x
           "
-          media="(min-width: 1280px)"
+          media="(min-width: 1340px)"
           type="image/png"
         />
         <source
@@ -71,6 +68,7 @@
         <img
           src="./images/header/desktop/hero-bg.png"
           alt="Фото преподавателя"
+          class="hero-img"
         />
       </picture>
     </section>
