Добавляет разметку, стили и адаптивность секции

--- a/src/partials/section-we-guarantee.html
+++ b/src/partials/section-we-guarantee.html
@@ -1,67 +1,55 @@
-<section class="we-guarantee container">
-  <h2 class="we-guarantee-title">Мы гарантируем</h2>
-  <ul class="we-guarantee-list">
-    <li class="we-guarantee-item">
-      <!-- <img
-        src="./images/svg/fire.svg"
-        alt="Иконка пламени"
-        class="icon-we-guarantee"
-      /> -->
-
-      <!-- 22px 30px -->
-
-      <svg class="icon-we-guarantee" width="15px" height="20px">
-        <use href="./images/svg/sprite.svg#fire"></use>
-      </svg>
-      <p class="we-guarantee-text">
-        Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-        тестировании. Иначе мы вернем деньги.
-        <span class="we-guarantee-accent">*</span>
-      </p>
-    </li>
-    <li class="we-guarantee-item">
-      <!-- <img
-        src="./images/svg/fire.svg"
-        alt="Иконка пламени"
-        class="icon-we-guarantee"
-      /> -->
-      <svg class="icon-we-guarantee" width="15px" height="20px">
-        <use href="./images/svg/sprite.svg#fire"></use>
-      </svg>
-      <p class="we-guarantee-text">
-        Ты научишься писать сочинения минимум на 10 баллов из 14.
-        <span class="we-guarantee-accent">
-          В то время как 20% учеников получили за сочинение 0.</span
-        >
-      </p>
-    </li>
-    <li class="we-guarantee-item">
-      <!-- <img
-        src="./images/svg/fire.svg"
-        alt="Иконка пламени"
-        class="icon-we-guarantee"
-      /> -->
-      <svg class="icon-we-guarantee" width="15px" height="20px">
-        <use href="./images/svg/sprite.svg#fire"></use>
-      </svg>
-      <p class="we-guarantee-text">
-        Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
-        после формирования команд.
-      </p>
-    </li>
-    <li class="we-guarantee-item">
-      <!-- <img
-        src="./images/svg/fire.svg"
-        alt="Иконка пламени"
-        class="icon-we-guarantee"
-      /> -->
-      <svg class="icon-we-guarantee" width="15px" height="20px">
-        <use href="./images/svg/sprite.svg#fire"></use>
-      </svg>
-      <p class="we-guarantee-text">
-        Команды будут сформированы, исходя из начального уровня учеников. Мы
-        учитываем особенности каждого ученика.
-      </p>
-    </li>
-  </ul>
+<section class="we-guarantee">
+  <div class="we-guarantee-container container">
+    <h2 class="we-guarantee-title">Мы гарантируем</h2>
+    <ul class="we-guarantee-list">
+      <li class="we-guarantee-item item-before">
+        <img
+          src="./images/svg/fire-with-fill.svg"
+          alt="Иконка пламени"
+          class="icon-we-guarantee"
+        />
+        <p class="we-guarantee-text">
+          Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+          тестировании. Иначе мы вернем деньги.
+          <span class="we-guarantee-accent">*</span>
+        </p>
+      </li>
+      <li class="we-guarantee-item item-before">
+        <img
+          src="./images/svg/fire-with-fill.svg"
+          alt="Иконка пламени"
+          class="icon-we-guarantee"
+        />
+        <p class="we-guarantee-text">
+          Ты научишься писать сочинения минимум на 10 баллов из 14.<span
+            class="we-guarantee-accent"
+          >
+            В то время как 20% учеников получили за сочинение 0.</span
+          >
+        </p>
+      </li>
+      <li class="we-guarantee-item item-before">
+        <img
+          src="./images/svg/fire-with-fill.svg"
+          alt="Иконка пламени"
+          class="icon-we-guarantee"
+        />
+        <p class="we-guarantee-text">
+          Ты будешь заниматься в своем районе. Мы выберем место проведения
+          занятий после формирования команд.
+        </p>
+      </li>
+      <li class="we-guarantee-item">
+        <img
+          src="./images/svg/fire-with-fill.svg"
+          alt="Иконка пламени"
+          class="icon-we-guarantee"
+        />
+        <p class="we-guarantee-text">
+          Команды будут сформированы, исходя из начального уровня учеников. Мы
+          учитываем особенности каждого ученика.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
