--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0px;
 }
 
@@ -25,8 +25,26 @@ ul {
 }
 
 img {
-    border-style: none;
-    display: block;
-    height: auto;
-    max-width: 100%;
+  border-style: none;
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+.container {
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 320px) {
+    width: 300px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 710px;
+  }
+  @media screen and (min-width: 1340px) {
+    width: 1340px;
+  }
 }
