Добавляет id к секции.

--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -1,4 +1,4 @@
-<section class="teacher">
+<section class="teacher" id="teacher">
   <div class="teacher-container container">
     <h2 class="teacher-title">Преподаватель</h2>
     <div class="teacher-box">
