--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -11,20 +11,20 @@
       <div class="hero-menu">
         <ul class="hero-menu-list">
           <li class="hero-menu-item">
-            <a href="" class="hero-menu-link">Программы обучения</a>
+            <a href="#programm" class="hero-menu-link">Программы обучения</a>
           </li>
           <li class="hero-menu-item">
-            <a href="" class="hero-menu-link">О нас</a>
+            <a href="#teacher" class="hero-menu-link">О нас</a>
           </li>
           <li class="hero-menu-item">
-            <a href="" class="hero-menu-link">Варианты обучения</a>
+            <a href="#options" class="hero-menu-link">Варианты обучения</a>
           </li>
           <li class="hero-menu-item">
-            <a href="" class="hero-menu-link">Контакты</a>
+            <a href="#contacts" class="hero-menu-link">Контакты</a>
           </li>
         </ul>
-        <a href="" class="hero-menu-cons">Консультация по телефону</a>
-        <button class="hero-button-menu">
+        <a href="#contacts" class="hero-menu-cons">Консультация по телефону</a>
+        <button type="button" class="hero-button-menu" data-modal-open>
           <img src="./images/svg/menu.svg" width="26" height="26" alt="" />
         </button>
       </div>
@@ -103,4 +103,43 @@
       </ul>
     </section>
   </div>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="menu">
+      <div class="menu-top">
+        <a href="#">
+          <img
+            class="modal-logo"
+            src="./images/svg/logo-white.svg"
+            alt="Логотип"
+            width="128px"
+            height="45px"
+          />
+        </a>
+        <button type="button" class="close" data-modal-close>
+          <img
+            src="./images/svg/menu-close.svg"
+            width="26"
+            height="26"
+            alt=""
+          />
+        </button>
+      </div>
+      <ul class="menu-list">
+        <li class="menu-item">
+          <a href="#programm" class="menu-link">Программа обучения</a>
+        </li>
+        <li class="menu-item">
+          <a href="#teacher" class="menu-link">О нас</a>
+        </li>
+        <li class="menu-item">
+          <a href="#options" class="menu-link">Варианты обучения</a>
+        </li>
+        <li class="menu-item">
+          <a href="#contacts" class="menu-link">Контакты</a>
+        </li>
+      </ul>
+      <a href="#contacts" class="menu-cons">Консультация по телефону</a>
+    </div>
+  </div>
+  <script src="./js/menu.js"></script>
 </header>
