--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -6,6 +6,23 @@
   background-position: 50% 0%;
 }
 
+.container {
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 320px) {
+    width: 300px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 710px;
+  }
+  @media screen and (min-width: 1340px) {
+    width: 1340px;
+  }
+}
+
 .hero-container {
   width: 1340px;
   margin-left: auto;
@@ -78,15 +95,18 @@
 
 .hero-button-menu {
   position: absolute;
-  top: 50%;
-  right: 3%;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-  transform: translate(-50%, -50%) scale(1);
-  display: inline-flex;
   padding-left: 0;
   padding-right: 0;
   border: none;
   background-color: transparent;
+  @media screen and (max-width: 767px) {
+    top: 13px;
+    right: 0px;
+  }
+  @media screen and (min-width: 768px) {
+    top: 17px;
+    right: 0px;
+  }
 }
 
 @media (min-width: 1340px) {
@@ -265,5 +285,129 @@
     font-size: 14px;
     line-height: 20px;
     margin: 0 0 0 68px;
+  }
+}
+// МЕНЮ
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(17, 21, 24, 0.9);
+  z-index: 100;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.3s linear;
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
+.menu {
+  position: relative;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (max-width: 767px) {
+    width: 300px;
+    padding-top: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 710px;
+    padding-top: 40px;
+  }
+}
+
+.menu-top {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.close {
+  position: absolute;
+  padding-left: 0;
+  padding-right: 0;
+  border: none;
+  background-color: transparent;
+  @media screen and (max-width: 767px) {
+    top: 9px;
+    right: 0px;
+  }
+  @media screen and (min-width: 768px) {
+    top: 13px;
+    right: 0px;
+  }
+}
+
+.modal-logo {
+  @media screen and (min-width: 768px) {
+    margin-top: 2px;
+  }
+}
+
+.menu-list {
+  margin: 0 auto 0;
+  @media screen and (max-width: 767px) {
+    padding-top: 50px;
+    width: 250px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 72px;
+    width: 324px;
+  }
+}
+
+.menu-item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 35px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 28px;
+  }
+}
+
+.menu-link {
+  font-weight: 800;
+  // line-height: 180%;
+  letter-spacing: 0.03em;
+  color: #fff;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (max-width: 767px) {
+    font-size: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+  }
+  &:hover,
+  &:focus {
+    color: #ff6b09;
+  }
+}
+
+.menu-cons {
+  display: block;
+  border: 2px solid #ff6b09;
+  width: 258px;
+  margin: 50px auto 0;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 45px;
+  text-align: center;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #ff6b09;
+  background-color: transparent;
+  &:hover,
+  &:focus {
+    background-color: #ff6b09;
+    color: #fff;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
   }
 }
