--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,8 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import '../sass/utils/mixin';
 @import '../sass/base/fonts';
 @import '../sass/base/common';
-@import '../sass/layouts/header';
+@import '../sass/layouts/footer';
 @import '../sass/utils/variables';
