--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,11 +31,15 @@
       <button class="footer-button">хочу на бесплатное занятие</button>
     </div>
     <div class="footer-inform">
-      <img class="footer-logo" src="../images/svg/logo-black.svg" alt="" />
+      <img class="footer-logo" src="./images/svg/logo-black.svg" alt="" />
       <div class="logo">
         <p class="text-main-logo">
           Hell
-          <img class="svg-fire" src="../images/svg/fire.svg" alt="" />EN
+          <img
+            class="svg-fire"
+            src="./images/svg/fire-with-fill.svg"
+            alt=""
+          />EN
         </p>
         <p class="text-un-logo">
           <span style="color: #ff6b09">адский</span> английский
@@ -43,19 +47,18 @@
       </div>
       <div class="tel-inst-footer">
         <div class="footer-adress">
-          <img class="svg-tel" src="../images/svg/phone.svg" alt="" />
+          <img class="svg-tel" src="./images/svg/phone.svg" alt="" />
           <p class="footer-tel">+38 (000) 000 00 00</p>
         </div>
         <a href="">
           <img
             class="svg-footer-inst"
-            src="../images/svg/instagram.svg"
+            src="./images/svg/instagram.svg"
             alt=""
           />
         </a>
       </div>
     </div>
-    <!-- <div>Hell EN Адский английский</div> -->
     <div class="footer-black container">@ Все права защищены, 2019</div>
   </footer>
 </section>
