--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import '../sass/utils/mixin';
 @import '../sass/base/fonts';
 @import '../sass/base/common';
 @import '../sass/utils/variables';
@@ -11,3 +12,4 @@
 @import '../sass/layouts/section-method';
 @import '../sass/layouts/teacher';
 @import '../sass/layouts/section-we-guarantee';
+@import '../sass/layouts/footer';
