--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,7 +1,7 @@
 .container {
-  width: 100%;
-  // padding-left: 10px;
-  // padding-right: 10px;
+  // width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
 }
