--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section id="contacts" class="container">
   <footer>
     <div class="footer-main">
       <p class="footer-subtitle">
