Добавил еще якорь

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -38,7 +38,7 @@
           <span class="descript">Просто не будет.</span><br />Но ты
           гарантировано наберешь<span class="descript-orange"> +25 баллов</span>
         </p>
-        <a href="" class="hero-bg-link">Хочу на бесплатное занятие</a>
+        <a href="#contacts" class="hero-bg-link">Хочу на бесплатное занятие</a>
       </div>
       <picture>
         <source
