--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section id="contacts" class="container">
+<section id="contacts">
   <footer>
     <div class="footer-main">
       <p class="footer-subtitle">
@@ -31,7 +31,7 @@
       <button class="footer-button">хочу на бесплатное занятие</button>
     </div>
     <div class="footer-inform">
-      <img class="footer-logo" src="./images/svg/logo-black.svg" alt="" />
+      <img class="footer-logo img" src="./images/svg/logo-black.svg" alt="" />
       <div class="logo">
         <p class="text-main-logo">
           Hell
@@ -52,13 +52,15 @@
         </div>
         <a href="">
           <img
-            class="svg-footer-inst"
+            class="svg-footer-inst img"
             src="./images/svg/instagram.svg"
             alt=""
           />
         </a>
       </div>
     </div>
-    <div class="footer-black container">@ Все права защищены, 2019</div>
+    <div class="footer-black">
+      <span class="footer-black-text">@ Все права защищены, 2019</span>
+    </div>
   </footer>
 </section>
