--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,4 +6,4 @@
 // Стили для файла с примером HTML-фрагмента
 @import '../sass/base/fonts';
 @import '../sass/base/common';
-@import './main-problems';
+@import '../sass/layouts/main-problems';
