--- a/src/sass/layouts/_program.scss
+++ b/src/sass/layouts/_program.scss
@@ -36,9 +36,29 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .program {
+    background-position-y: 63%;
+    background-position-x: 100%;
+    background-image: url(../images/program/tablet/main.png);
+    background-size: 384px 280px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/program/tablet/main@2x.png);
+    }
+  }
+}
+
 .program-box {
   @media screen and (min-width: 320px) {
     margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 189px;
+    padding-top: 60px;
   }
 
   > .title {
@@ -245,14 +265,25 @@
 .advantages {
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
   .title {
-    margin: 0 120px 30px 0;
+    margin: 0 0 30px 0;
 
     font-weight: 800;
-    font-size: 20px;
-    line-height: 1.36;
+
     letter-spacing: 0.03em;
 
     color: #ffffff;
+
+    @media screen and (max-width: 767px) {
+      margin: 0 120px 30px 0;
+      font-size: 20px;
+      line-height: 1.36;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1399px) {
+      font-size: 26px;
+      line-height: 1.3;
+      text-align: center;
+    }
   }
 }
 
