--- a/src/sass/layouts/_program.scss
+++ b/src/sass/layouts/_program.scss
@@ -12,6 +12,10 @@
   @media screen and (min-width: 768px) {
     width: 710px;
   }
+
+  @media screen and (min-width: 1340px) {
+    width: 1340px;
+  }
 }
 
 .program {
@@ -51,6 +55,21 @@
   }
 }
 
+@media screen and (min-width: 1340px) {
+  .program {
+    background-position-y: 63%;
+    background-position-x: 0%;
+    background-image: url(../images/program/desktop/main.png);
+    background-size: 535px 392px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/program/desktop/main@2x.png);
+    }
+  }
+}
+
 .program-box {
   @media screen and (min-width: 320px) {
     margin-bottom: 50px;
@@ -59,6 +78,11 @@
   @media screen and (min-width: 768px) {
     margin-bottom: 189px;
     padding-top: 60px;
+  }
+
+  @media screen and (min-width: 1340px) {
+    margin-bottom: 164px;
+    padding-top: 120px;
   }
 
   > .title {
@@ -93,12 +117,12 @@
   position: relative;
 
   &::before {
-    position: absolute;
     content: '';
-    left: 0;
+    display: block;
+    position: absolute;
     top: 10px;
-
-    border: 1px solid #ffffff;
+    left: 0;
+    width: 2px;
 
     @media screen and (min-width: 320px) {
       height: 1150px;
@@ -107,6 +131,15 @@
     @media screen and (min-width: 768px) {
       height: 660px;
     }
+
+    @media screen and (min-width: 1340px) {
+      top: -47px;
+      left: 0;
+      height: 2px;
+      width: 100vw;
+      transform: translateX(calc((-100vw + 1320px) / 2));
+    }
+    background-color: #ffffff;
   }
 
   @media screen and (max-width: 767px) {
@@ -114,9 +147,13 @@
     padding: 0 0 0 20px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1339px) {
     margin: 0 0 0 65px;
     padding: 0 0 0 20px;
+  }
+
+  @media screen and (min-width: 1340px) {
+    display: flex;
   }
 }
 
@@ -138,8 +175,8 @@
   @media screen and (min-width: 1340px) {
     margin: 0 0 25px 0;
 
-    font-size: 30px;
-    line-height: 0.93;
+    font-size: 18px;
+    line-height: 1.2;
   }
 }
 
@@ -157,6 +194,11 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
+
+    @media screen and (min-width: 1340px) {
+      left: 3px;
+      top: -52px;
+    }
   }
 
   @media screen and (max-width: 767px) {
@@ -170,17 +212,21 @@
       margin: 0 0 30px 0;
     }
   }
+
+  @media screen and (min-width: 1340px) {
+    width: 240px;
+  }
+
+  @media screen and (min-width: 1340px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 
 .program-item .box {
-  @media screen and (min-width: 768px) {
-    display: flex;
-
-    margin-left: 35px;
-  }
-
   .item {
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1339px) {
       &:not(:last-child) {
         margin-right: 50px;
       }
@@ -189,6 +235,16 @@
         width: 176px;
       }
     }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1339px) {
+    display: flex;
+
+    margin-left: 35px;
+  }
+
+  @media screen and (min-width: 1340px) {
+    flex-direction: column;
   }
 }
 
@@ -220,8 +276,8 @@
   }
 
   @media screen and (min-width: 1340px) {
-    font-size: 20px;
-    line-height: 1.65;
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
 
@@ -237,8 +293,8 @@
   opacity: 0.5;
 
   @media screen and (min-width: 1340px) {
-    font-size: 18px;
-    line-height: 1.55;
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
 
@@ -284,6 +340,18 @@
       line-height: 1.3;
       text-align: center;
     }
+
+    @media screen and (min-width: 1340px) {
+      position: absolute !important;
+      clip: rect(1px 1px 1px 1px);
+      /* IE6, IE7 */
+      clip: rect(1px, 1px, 1px, 1px);
+      padding: 0 !important;
+      border: 0 !important;
+      height: 1px !important;
+      width: 1px !important;
+      overflow: hidden;
+    }
   }
 }
 
@@ -300,6 +368,10 @@
 
     padding: 30px 118px 30px 98px;
   }
+
+  @media screen and (min-width: 1340px) {
+    padding: 70px 82px 70px 84px;
+  }
 }
 
 .advantages-list .item {
@@ -309,10 +381,17 @@
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1339) {
     width: 230px;
     &:not(:nth-last-child(-n + 2)) {
       margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1340px) {
+    width: 356px;
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 32px;
     }
   }
 }
