--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,4 +12,5 @@
 @import '../sass/layouts/section-method';
 @import '../sass/layouts/teacher';
 @import '../sass/layouts/section-we-guarantee';
+@import '../sass/layouts/reviews';
 @import '../sass/layouts/footer';
