--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="footer-black">
-      <span class="footer-black-text">@ Все права защищены, 2019</span>
+      <span class="footer-black-text">@, Все права защищены, 2019</span>
     </div>
   </footer>
 </section>
