--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import '../sass/utils/mixin';
 @import '../sass/base/fonts';
 @import '../sass/base/common';
-@import '../sass/utils/variables';
 @import '../sass/layouts/header';
 @import '../sass/layouts/main-problems';
 @import '../sass/layouts/section-method';
@@ -14,4 +14,3 @@
 @import '../sass/layouts/section-we-guarantee';
 @import '../sass/layouts/reviews';
 @import '../sass/layouts/footer';
-
