--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0px;
 }
 
@@ -24,9 +24,9 @@ ul {
   list-style: none;
 }
 
-img {
-    border-style: none;
-    display: block;
-    height: auto;
-    max-width: 100%;
+.img {
+  border-style: none;
+  display: block;
+  height: auto;
+  max-width: 100%;
 }
