--- a/src/sass/layouts/_main-problems.scss
+++ b/src/sass/layouts/_main-problems.scss
@@ -1,25 +1,21 @@
 .section {
-  position: relative;
-  width: 320px;
+  // position: relative;
+  width: 100%;
   height: 545px;
   margin-right: auto;
   margin-left: auto;
+  // margin-bottom: 100px;
   padding-top: 50px;
   background-color: #111518;
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    height: 340px;
-  }
-
-  @media screen and (min-width: 1680px) {
-    width: 1680px;
-    height: 560px;
-  }
 }
-
+.margin {
+  position: relative;
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .bg-image {
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     background-repeat: no-repeat;
     background-position: right bottom;
     background-size: auto 470px;
@@ -47,7 +43,7 @@
     display: block;
   }
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     font-size: 46px;
     margin: 50px 170px 70px;
   }
@@ -70,18 +66,21 @@
 .item-block {
   position: absolute;
   top: 205px;
-  left: 10px;
+  left: 50%;
+  transform: translate(-50%);
 
-  width: 300px;
-  height: 488px;
-  padding: 20px 32px;
+  width: 280px;
+  // height: 488px;
+  padding: 20px 14px 20px 30px;
+  margin-right: auto;
+  margin-left: auto;
 
   background: #ffffff;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 
   @media screen and (min-width: 768px) {
     width: 710px;
-    height: 303px;
+    // height: 303px;
     top: 190px;
     left: 30px;
 
@@ -89,9 +88,9 @@
     padding-right: 95px;
   }
 
-  @media screen and (min-width: 1680px) {
-    width: 1340px;
-    height: 362px;
+  @media screen and (min-width: 1340px) {
+    width: 1320px;
+    // height: 362px;
 
     top: 348px;
     left: 170px;
