--- a/src/sass/layouts/_main-problems.scss
+++ b/src/sass/layouts/_main-problems.scss
@@ -1,18 +1,33 @@
 .section {
-  // position: relative;
   width: 100%;
   height: 545px;
   margin-right: auto;
   margin-left: auto;
-  // margin-bottom: 100px;
+  margin-bottom: 100px;
   padding-top: 50px;
   background-color: #111518;
+
+  @include for-size(tablet-landscape) {
+    height: 340px;
+  }
+  @include for-size(desktop) {
+    height: 560px;
+  }
 }
 .margin {
   position: relative;
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  @include for-size(tablet-landscape) {
+    width: 768px;
+  }
+  @include for-size(desktop) {
+    width: 1340px;
+  }
 }
 .bg-image {
   @media screen and (min-width: 1340px) {
@@ -40,12 +55,17 @@
   color: #ffffff;
 
   @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
     display: block;
+    width: 568px;
   }
 
   @media screen and (min-width: 1340px) {
+    display: block;
+    width: 866px;
     font-size: 46px;
-    margin: 50px 170px 70px;
+    margin: 0px;
+    // margin: 50px 170px 70px;
   }
 }
 .mobile-tittle {
@@ -78,11 +98,14 @@
   background: #ffffff;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 
+  @media screen and (max-width: 767px) {
+    left: 50%;
+    transform: translate(-50%);
+  }
   @media screen and (min-width: 768px) {
     width: 710px;
     // height: 303px;
-    top: 190px;
-    left: 30px;
+    top: 125%;
 
     padding-left: 100px;
     padding-right: 95px;
@@ -93,7 +116,7 @@
     // height: 362px;
 
     top: 348px;
-    left: 170px;
+    // left: 170px;
     padding-top: 70px;
     padding-bottom: 62px;
   }
@@ -113,7 +136,7 @@
     margin-bottom: 0;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1339px) {
     width: 225px;
 
     &:nth-child(2) {
@@ -122,6 +145,14 @@
     &:nth-child(odd) {
       margin-right: 40px;
     }
+    // @include for-size(desktop) {
+    //   width: 335px;
+    //   margin-left: 40px;
+
+    //   &:nth-child(n + 3) {
+    //     margin-left: 0px;
+    //   }
+    // }
   }
 
   @media screen and (min-width: 1680px) {
