--- a/src/sass/layouts/_main-problems.scss
+++ b/src/sass/layouts/_main-problems.scss
@@ -145,17 +145,17 @@
     &:nth-child(odd) {
       margin-right: 40px;
     }
-    // @include for-size(desktop) {
-    //   width: 335px;
-    //   margin-left: 40px;
+    @include for-size(desktop) {
+      width: 335px;
+      // margin-right: 40px;
 
-    //   &:nth-child(n + 3) {
-    //     margin-left: 0px;
-    //   }
-    // }
+      &:nth-child(n + 3) {
+        margin-right: 0px;
+      }
+    }
   }
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     width: 336px;
     margin-top: 0;
     margin-right: 40px;
@@ -177,7 +177,7 @@
 
   color: #111518;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     font-size: 20px;
     line-height: 1.4;
   }
@@ -188,7 +188,7 @@
   margin-bottom: 5px;
   letter-spacing: 0.08em;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     margin-bottom: 10px;
   }
 
@@ -201,7 +201,7 @@
 
   color: #ff6b09;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     margin-bottom: 10px;
   }
 }
@@ -212,7 +212,7 @@
 
   color: #ff6b09;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     margin-bottom: 10px;
   }
 }
@@ -223,7 +223,7 @@
 
   color: #ff6b09;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     margin-bottom: 10px;
   }
 }
@@ -234,7 +234,7 @@
 
   color: #ff6b09;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     margin-bottom: 10px;
   }
 }
@@ -245,7 +245,7 @@
 
   color: #ff6b09;
 
-  @media screen and (min-width: 1680px) {
+  @media screen and (min-width: 1340px) {
     margin-bottom: 10px;
   }
 }
