--- a/src/partials/section-methods.html
+++ b/src/partials/section-methods.html
@@ -1,4 +1,4 @@
-<section class="methods-section">
+<section class="methods-section" id="options">
   <div class="container">
     <h2 class="methods-title">Как мы это делаем</h2>
     <ul class="methods-list">
