--- a/src/partials/section-program.html
+++ b/src/partials/section-program.html
@@ -1,4 +1,4 @@
-<section class="program">
+<section class="program" id="programm">
   <div class="program-box container">
     <h2 class="title">Наша программа</h2>
     <ul class="program-list">
